# SKBaseAI_MVP1

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.claude/skills/auth-bff/: SKILL.md
.claude/skills/backend/: SKILL.md
.claude/skills/database/: SKILL.md
.claude/skills/deployment/: SKILL.md
.claude/skills/frontend/: SKILL.md
.claude/skills/overview/: SKILL.md
.claude/skills/scaling/: SKILL.md
.github/workflows/: ci.yml
.husky/: pre-push
apps/api/: arq_pool.py  config.py  db.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test_predictor.py  worker.py
apps/api/routes/: analytics.py  clients.py  proposals.py  taxonomies.py  tickets.py  users.py
apps/api/services/: embeddings.py  enrichment.py  llm.py  retrieval.py  supabase_admin.py  taxonomy_predictor.py
apps/api/tests/: conftest.py  test_enrichment.py  test_taxonomy_predictor.py
apps/web/: .gitignore  middleware.ts  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/add_client/: page.tsx
apps/web/app/analytics/: page.tsx
apps/web/app/clients/: page.tsx
apps/web/components/: AppShell.tsx  AppSidebar.tsx  ProposalCard.tsx  TopNav.tsx
apps/web/contexts/: ClientContext.tsx
apps/web/lib/: api-client.ts  supabase-server.ts  supabase.ts  types.ts
apps/web/public/: sample-tickets-2.csv  sample-tickets.csv
docs/: backend.md  bff-auth.md  database.md  deployment.md  enrichment-pipeline.md  frontend.md  overview.md  scaling-notes.md  taxonomy-prediction.md
(+19 files in other folders)
